Finalizado el ejemplo sobre el uso de Javascript y SVG

--- a/svg_example/svg_html_css_jquery/index.html
+++ b/svg_example/svg_html_css_jquery/index.html
@@ -17,7 +17,7 @@
         }
 
         function mouseClick(evt) {
-                alert('hola');
+                alert(evt.target.id);
         }
     </script>
 
