--- a/svg_example/embedded_svg_html/index.html
+++ b/svg_example/embedded_svg_html/index.html
@@ -7,6 +7,6 @@
         <script src="js/actions.js"></script>
     </head>
     <body>       
-        <div id="stage"></div>
+        <div id="svg_container"></div>
     </body>
 </html>
